:white_check_mark: Adding tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,11 @@
 [metadata]
 name = pbkdf2-reboot
-description = pbkdf2 implementation in modern python with typing support.
 version = 0.0.0
+description = pbkdf2 implementation in modern python with typing support.
+long_description = file: README.md
+long_description_content_type = text/markdown
 author = Sigmanificient
+keywords = pbkdf, pbkdf2, cryptography, hashing, password, encryption, typing
 platforms = unix, linux, osx, cygwin, win32
 classifiers =
     Programming Language :: Python :: 3
@@ -11,6 +14,8 @@ classifiers =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+project_urls =
+    Github repository=https://github.com/Sigmanificient/pbkdf2-reboot
 
 [options]
 packages =
@@ -22,6 +27,7 @@ zip_safe = no
 
 [options.extras_require]
 testing =
+    pytest>=7.1.2
     mypy>=0.950
     black>=22.3.0
 
