--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,10 @@ zip_safe = no
 
 [options.extras_require]
 testing =
+    coverage>=6.3.0
+    codecov>=2.0.0
     pytest>=7.1.2
+    pytest-cov>=3.0.0
     mypy>=0.950
     black>=22.3.0
 
