--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -6,15 +6,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Set up Python 3.9
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
+
       - name: Install dependencies
         run: pip install coverage pytest pytest-cov codecov
+
+      - name: Install package
+        run: pip install -e .
+
       - name: Run tests and collect coverage
         run: |
           pytest --cov=.
           coverage xml
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
