:wrench: Using adopts for pytest

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Run tests and collect coverage
         run: |
-          pytest --cov=.
+          pytest
           coverage xml
 
       - name: Upload coverage to Codecov
